
Beijing I/O module
==================

2016-03-08 AKHE - Adopted to 1.6 firmware. Adopted for PIC18F26K80.
2015-11-27 AKHE - "Debouce input" is now called "button input" in documentation.
2015-11-27 AKHE - TurnON/TurnOff is now selectable instead of ON/TurnON for button inputs.
2015-11-27 AKHE - Fixed problem with channel 8/9 in button (debounce) mode.
2015-11-17 AKHE - Request for decision matrix information returned invalid information. Fixed
2015-11-15 AKHE - Version 1.1.0
2015-11-15 AKHE - Debounce time can now be set to make the debounce less responsive or more responsive (reg 46). 
Also input button repeats can now be turned off (bit 1 in module control register).
2015-11-13 AKHE - Fixed resend timer if can is busy sending message.
2015-11-10 AKHE - Start up initialization of I/O 7 was not initialized.
2015-06-16 AKHE - Started development.
