@@ -1,137 +1,85 @@
-_vscp_getBootLoaderAlgorithm: CODE, 18610 0 2
-PL12: CODE, 11036 0 20
-PL50: CODE, 14550 0 18
-PL8: CODE, 5504 0 14
-_vscp_getZone: CODE, 18542 0 10
-PL22: CODE, 9694 0 48
-PL60: CODE, 15860 0 18
-_vscp_getControlByte: CODE, 18094 0 32
-PL100: CODE, 8846 0 10
-PL32: CODE, 7250 0 14
-PL70: CODE, 5546 0 14
-_init: CODE, 17374 0 68
-_vscp_setManufacturerId: CODE, 17946 0 38
-PL42: CODE, 7264 0 14
-PL80: CODE, 5574 0 14
-_doDM: CODE, 10504 0 532
-PL14: CODE, 9556 0 62
-PL52: CODE, 14568 0 20
-PL90: CODE, 5630 0 14
-_ECANReceiveMessage: CODE, 11634 0 506
-_vscp_getEvent: CODE, 17826 0 42
-_vscp_handleHeartbeat: CODE, 18618 0 2
-_vscp_readRegister: CODE, 18300 0 26
-PL24: CODE, 14794 0 20
-PL62: CODE, 14852 0 18
-_vscp_setGUID: CODE, 17984 0 38
-_SendInformationEvent: CODE, 17068 0 82
-PL34: CODE, 14516 0 14
-PL72: CODE, 13346 0 14
-__RegsToCANID: CODE, 14320 0 196
+_vscp_getBootLoaderAlgorithm: CODE, 19982 0 2
+_vscp_getZone: CODE, 19914 0 10
+_vscp_getControlByte: CODE, 19466 0 32
+_init: CODE, 18746 0 68
+_vscp_setManufacturerId: CODE, 19318 0 38
+_doDM: CODE, 11590 0 692
+_ECANReceiveMessage: CODE, 12836 0 526
+_vscp_getEvent: CODE, 19198 0 42
+_vscp_handleHeartbeat: CODE, 19990 0 2
+_vscp_readRegister: CODE, 19672 0 26
+_vscp_setGUID: CODE, 19356 0 38
+_SendInformationEvent: CODE, 18440 0 82
+__RegsToCANID: CODE, 14952 0 356
 _vscp_deviceURL: SMALLCONST, 2254 0 32
-_vscp_writeRegister: CODE, 18060 0 34
-PL44: CODE, 12964 0 20
-PL82: CODE, 5588 0 14
-_getVSCPFrame: CODE, 16830 0 120
-_vscp_setControlByte: CODE, 18022 0 38
-_vscp_getUserID: CODE, 18438 0 20
-PL16: CODE, 9618 0 24
-PL54: CODE, 9742 0 20
-PL92: CODE, 5644 0 14
-PL26: CODE, 7190 0 28
-PL64: CODE, 14588 0 18
-_Busy_eep: CODE, 18590 0 6
-PL102: CODE, 9762 0 10
-PL36: CODE, 11056 0 24
-PL74: CODE, 12140 0 14
-_vscp_error: CODE, 18596 0 4
-_doWork: CODE, 18604 0 2
-_vscp_init_pstorage: CODE, 18600 0 4
-_vscp_restoreDefaults: CODE, 18582 0 8
-PL46: CODE, 14530 0 20
-PL84: CODE, 5602 0 14
-_memset: CODE, 17696 0 44
-PL18: CODE, 9642 0 52
-PL56: CODE, 14832 0 20
-PL94: CODE, 14870 0 10
-_vscp_readStdReg: CODE, 12580 0 384
-_vscp_readAppReg: CODE, 12154 0 426
-_vscp_getFamilyCode: CODE, 18562 0 10
-PL28: CODE, 7218 0 18
-PL66: CODE, 5518 0 14
-_doActionOn: CODE, 14030 0 290
-_vscp_setUserID: CODE, 18244 0 28
-_getCANFrame: CODE, 17740 0 44
-_main: CODE, 11080 0 554
-_doActionOff: CODE, 16100 0 214
-PL38: CODE, 8788 0 24
-PL76: CODE, 10490 0 14
-_Read_b_eep: CODE, 18496 0 18
-PL48: CODE, 8812 0 20
-PL86: CODE, 5616 0 14
-_calculateSetFilterMask: CODE, 8856 0 700
-_vscp_goActiveState: CODE, 18156 0 30
-_vscp_doOneSecondWork: CODE, 17150 0 80
-_vscp_getRegisterPagesUsed: CODE, 18606 0 2
-_doActionPulseOff: CODE, 15152 0 256
-PL58: CODE, 10472 0 18
-PL96: CODE, 12984 0 12
-PL68: CODE, 5532 0 14
-_sendVSCPFrame: CODE, 16498 0 182
-_vscp_sendEvent: CODE, 17552 0 50
-_vscp_getMDF_URL: CODE, 18326 0 24
-PL104: CODE, 9772 0 8
-PL78: CODE, 5560 0 14
-_init_app_eeprom: CODE, 12996 0 350
-PL88: CODE, 8832 0 14
-_sendCANFrame: CODE, 17230 0 74
-PL98: CODE, 7278 0 8
-_Write_b_eep: CODE, 17500 0 52
-_vscp_check_pstorage: CODE, 17442 0 58
-_vscp_writeStdReg: CODE, 14880 0 272
-_WriteTimer0: CODE, 18478 0 18
-_vscp_writeAppReg: CODE, 2288 0 3168
-_vscp_handleProtocolEvent: CODE, 7286 0 1502
-_doActionStatusAll: CODE, 18216 0 28
-__initialization: CODE, 17650 0 36
-__ECANPointBuffer: CODE, 16950 0 118
-_vscp_getFamilyType: CODE, 18552 0 10
-_vscp_getBufferSize: CODE, 18608 0 2
-_vscp_getSubzone: CODE, 18532 0 10
-_vscp_getMatrixInfo: CODE, 18374 0 22
-_vscp_handleDropNickname: CODE, 17602 0 48
-_vscp_handleSetNickname: CODE, 18126 0 30
-_vscp_handleProbeState: CODE, 16314 0 184
-_vscp_goBootloaderMode: CODE, 18272 0 28
-_doActionToggle: CODE, 15408 0 248
-_doActionStatus: CODE, 15878 0 222
-_vscp_readNicknamePermanent: CODE, 18572 0 10
-_vscp_sendHeartBeat: CODE, 17908 0 38
-_ECANInitialize: CODE, 16680 0 150
-_OpenTimer0: CODE, 18186 0 30
+_vscp_writeRegister: CODE, 19432 0 34
+_getVSCPFrame: CODE, 18202 0 120
+_vscp_setControlByte: CODE, 19394 0 38
+_vscp_getUserID: CODE, 19810 0 20
+_Busy_eep: CODE, 19962 0 6
+_vscp_error: CODE, 19968 0 4
+_doWork: CODE, 19976 0 2
+_vscp_init_pstorage: CODE, 19972 0 4
+_vscp_restoreDefaults: CODE, 19954 0 8
+_memset: CODE, 19068 0 44
+_vscp_readStdReg: CODE, 13362 0 432
+_vscp_readAppReg: CODE, 13794 0 426
+_vscp_getFamilyCode: CODE, 19934 0 10
+_doActionOn: CODE, 15952 0 290
+_vscp_setUserID: CODE, 19616 0 28
+_getCANFrame: CODE, 19112 0 44
+_main: CODE, 12282 0 554
+_doActionOff: CODE, 17472 0 214
+_Read_b_eep: CODE, 19868 0 18
+_calculateSetFilterMask: CODE, 9718 0 1132
+_vscp_goActiveState: CODE, 19528 0 30
+_vscp_doOneSecondWork: CODE, 18522 0 80
+_vscp_getRegisterPagesUsed: CODE, 19978 0 2
+_doActionPulseOff: CODE, 16514 0 256
+_sendVSCPFrame: CODE, 17870 0 182
+_vscp_sendEvent: CODE, 18924 0 50
+_vscp_getMDF_URL: CODE, 19698 0 24
+_init_app_eeprom: CODE, 14220 0 370
+_sendCANFrame: CODE, 18602 0 74
+_Write_b_eep: CODE, 18872 0 52
+_vscp_check_pstorage: CODE, 18814 0 58
+_vscp_writeStdReg: CODE, 16242 0 272
+_WriteTimer0: CODE, 19850 0 18
+_vscp_writeAppReg: CODE, 2288 0 3984
+_vscp_handleProtocolEvent: CODE, 8110 0 1608
+_doActionStatusAll: CODE, 19588 0 28
+__initialization: CODE, 19022 0 36
+__ECANPointBuffer: CODE, 18322 0 118
+_vscp_getFamilyType: CODE, 19924 0 10
+_vscp_getBufferSize: CODE, 19980 0 2
+_vscp_getSubzone: CODE, 19904 0 10
+_vscp_getMatrixInfo: CODE, 19746 0 22
+_vscp_handleDropNickname: CODE, 18974 0 48
+_vscp_handleSetNickname: CODE, 19498 0 30
+_vscp_handleProbeState: CODE, 17686 0 184
+_vscp_goBootloaderMode: CODE, 19644 0 28
+_doActionToggle: CODE, 16770 0 248
+_doActionStatus: CODE, 17250 0 222
+_vscp_readNicknamePermanent: CODE, 19944 0 10
+_vscp_sendHeartBeat: CODE, 19280 0 38
+_ECANInitialize: CODE, 18052 0 150
+_OpenTimer0: CODE, 19558 0 30
 _interrupt_at_low_vector: CODE, 2072 0 178
-_doApplicationOneSecondWork: CODE, 5658 0 1480
-_handleButtonInput: CODE, 15656 0 204
-i1_WriteTimer0: CODE, 18514 0 18
-_doActionPulseOn: CODE, 13722 0 308
-_vscp_getMajorVersion: CODE, 18616 0 2
-_vscp_getMinorVersion: CODE, 18614 0 2
-_vscp_writeNicknamePermanent: CODE, 18396 0 22
-_vscp_newNodeOnline: CODE, 17784 0 42
-__CANIDToRegs: CODE, 14606 0 188
-_vscp_init: CODE, 17304 0 70
-PL2: CODE, 5456 0 18
-_init_app_ram: CODE, 9780 0 692
-PL10: CODE, 7138 0 34
-PL4: CODE, 5474 0 14
-_vscp_getManufacturerId: CODE, 18418 0 20
-___lbmod: CODE, 17868 0 40
-PL20: CODE, 7172 0 18
-_vscp_getSubMinorVersion: CODE, 18612 0 2
-_ECANSetOperationMode: CODE, 18350 0 24
-PL30: CODE, 7236 0 14
-PL6: CODE, 5488 0 16
-PL40: CODE, 14814 0 18
-_ECANSendMessage: CODE, 13360 0 362
-_vscp_getGUID: CODE, 18458 0 20
-Total: 16532
+_doApplicationOneSecondWork: CODE, 6272 0 1838
+_handleButtonInput: CODE, 17018 0 232
+i1_WriteTimer0: CODE, 19886 0 18
+_doActionPulseOn: CODE, 15644 0 308
+_vscp_getMajorVersion: CODE, 19988 0 2
+_vscp_getMinorVersion: CODE, 19986 0 2
+_vscp_writeNicknamePermanent: CODE, 19768 0 22
+_vscp_newNodeOnline: CODE, 19156 0 42
+__CANIDToRegs: CODE, 15308 0 336
+_vscp_init: CODE, 18676 0 70
+_init_app_ram: CODE, 10850 0 740
+_vscp_getManufacturerId: CODE, 19790 0 20
+___lbmod: CODE, 19240 0 40
+_vscp_getSubMinorVersion: CODE, 19984 0 2
+_ECANSetOperationMode: CODE, 19722 0 24
+_ECANSendMessage: CODE, 14590 0 362
+_vscp_getGUID: CODE, 19830 0 20
+Total: 17904
