@@ -286,7 +286,7 @@
       </makeCustomizationType>
       <HI-TECH-COMP>
         <property key="asmlist" value="true"/>
-        <property key="define-macros" value=""/>
+        <property key="define-macros" value="RELEASE"/>
         <property key="extra-include-directories"
                   value=".;..;..\..\vscp_firmware\pic\common;..\..\vscp_firmware\common"/>
         <property key="identifier-length" value="255"/>
@@ -493,7 +493,7 @@
       </makeCustomizationType>
       <HI-TECH-COMP>
         <property key="asmlist" value="true"/>
-        <property key="define-macros" value=""/>
+        <property key="define-macros" value="DEBUG"/>
         <property key="extra-include-directories"
                   value=".;..;..\..\vscp_firmware\pic\common;..\..\vscp_firmware\common"/>
         <property key="identifier-length" value="255"/>
@@ -641,7 +641,7 @@
       </makeCustomizationType>
       <HI-TECH-COMP>
         <property key="asmlist" value="true"/>
-        <property key="define-macros" value=""/>
+        <property key="define-macros" value="RELEASE"/>
         <property key="extra-include-directories"
                   value=".;..;..\..\vscp_firmware\pic\common;..\..\vscp_firmware\common"/>
         <property key="identifier-length" value="255"/>
