@@ -21,6 +21,8 @@
         </file>
     </editor-bookmarks>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
-        <group/>
+        <group>
+            <file>file:/home/akhe/development/VSCP/can4vscp_beijing/main.c</file>
+        </group>
     </open-files>
 </project-private>
