@@ -29,7 +29,7 @@
 
 #define FIRMWARE_MAJOR_VERSION      1
 #define FIRMWARE_MINOR_VERSION      1
-#define FIRMWARE_SUB_MINOR_VERSION  2
+#define FIRMWARE_SUB_MINOR_VERSION  3
 
 
 // * * * History * * *
